--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -4,7 +4,7 @@ services:
     build:
       dockerfile: Dockerfile-install
       context: ./web-content
-    image: alexsimons/nodeinstall
+    image: alexsimons/nodeinstall:9.2.0
     volumes:
       - ./web-content:/app
 
